# lit-board

./: .gitignore  CMakeLists.txt  Config.h  ConfigHandler.cpp  ConfigHandler.h  DriverBehavior.cpp  DriverBehavior.h  HIDDevice.cpp  HIDDevice.h  KeyboardHandler.cpp  KeyboardHandler.h  LitBoard.cpp  LitBoard.h  LitBoardDriver.cpp  LitBoardDriver.h  LiveWeatherBehavior.cpp  LiveWeatherBehavior.h  Logger.cpp  Logger.h  MessageType.h  PeriodicDriverBehavior.cpp  PeriodicDriverBehavior.h  README.md  WeatherData.h  config.json  main.cpp  weather_config.txt
component/: AppIntegration.cpp  AppIntegration.h  AudioClientProvider.cpp  AudioClientProvider.h  AudioVisualizer.cpp  AudioVisualizer.h  Component.cpp  Component.h  CyclicComponent.cpp  CyclicComponent.h  LiveWeather.cpp  LiveWeather.h  MessageHandler.cpp  MessageHandler.h  NotificationHandler.cpp  NotificationHandler.h  ServerHandler.cpp  ServerHandler.h  StateHandler.cpp  StateHandler.h  WeatherData.cpp  WeatherData.h
